Moved the radar chart legend a bit to the center to prevent overflow

--- a/app/styles/radar-chart.css
+++ b/app/styles/radar-chart.css
@@ -3,7 +3,7 @@
 	height: 350px;
 	text-align: left;
 	position: absolute;
-	left: 790px;
+	left: 780px;
 	top: 50px;
  }
 
